# new_job_Apply

./: .env.example  JOBSPY_ALOK.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  README_V2.md  alok_personalized.csv  alok_personalized_debug.csv  alok_personalized_debug_20251220_183336.csv  alok_personalized_debug_20251220_183911.csv  alok_personalized_debug_20251222_135140.csv  alok_personalized_debug_20251222_213129.csv  alok_personalized_debug_20251222_222324.csv  alok_personalized_final.csv  application_support_jobs_india.csv  application_support_jobs_india_20251220_164922.csv  application_support_jobs_india_20251220_165016.csv  cli.py  finalize_alok_output.py  jobs.csv  main.py  manual_google_debug.py  pyproject.toml  requirement.txt  requirements.txt  requirements_additional.txt  run_alok.py  run_discover.py  run_enrich_debug.py  run_server.py  run_site_check.py  run_zip_google_check.py  settings.py  summary.txt  test_glassdoor.py  test_indeed.py  test_indeed_us.py  test_output_debug_20251220_183453.csv  test_remoterocketship.py  test_ziprecruiter.py  (+1 more)
archive/: summary.txt
docs/: architecture.md  plan.md  providers.md
jobspy/: __init__.py  config.py  database.py  evaluator.py  exception.py  mock_scrapers.py  model.py  output_manager.py  pipeline.py  playwright_pool.py  providers.py  scrape_jobs.py  util.py
outputs/: all_jobs.csv  full_run.csv  private_profiles_20251222_173003.csv  private_profiles_20251222_173334.csv  public_batch_0000.csv  public_batch_0001.csv  public_batch_0002.csv  public_batch_0003.csv  public_batch_0004.csv  public_batch_0005.csv  (+1 more)
(+121 files in other folders)
