[tool.poetry]
name = "jobspy"
version = "0.2.0"
description = "Personalized job scraping and matching pipeline"
authors = ["Alok Garg <alokgarg003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.13.2"
pydantic = "^2.9.2"
pandas = "^2.2.3"
numpy = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"